[package]
name = "locale_config"
version = "0.2.2"
description = """
Maintains locale preferences for process and thread and initialises them by
inspecting the system for user preference.
"""
authors = [
    "Jan Hudec <bulb@ucw.cz>",
]
license = "MIT"

documentation = "https://docs.rs/locale_config/"
repository = "https://github.com/rust-locale/locale_config/"
readme = "README.md"
keywords = ["i18n"]
categories = ["os"]

[badges]
travis-ci = { repository = "rust-locale/locale_config" }
appveyor = { repository = "rust-locale/locale_config" }

[dependencies]
lazy_static = "0.2"
regex = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"

[package.metadata.release]
upload-doc = true
